--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -15,7 +15,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
 }
-.productInputs div{
+.productInputs div, .qtq {
     padding: 2rem 0;
     width: 30%;
     display: flex;
@@ -25,9 +25,13 @@
     /* margin: auto; */
 }
 
-.label {
-    padding: .5rem;
+.leftBorder {
+    padding: .3rem;
     border-left: 1px solid gray;    
+}
+.rightBorder {
+    padding: .3rem;
+    border-right: 1px solid gray;    
 }
 .productForm .marginDiv{
     margin: 1rem 0;
@@ -85,7 +89,7 @@
 .discountSection{
     margin: 1rem 0;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 .discountSection .discountRate{
     margin: 0 1rem;
@@ -104,4 +108,66 @@
 .description div{
     width: 80%;
     margin: 1rem
+}
+.quantity{
+    display: flex !important;
+    flex-direction: column !important;
+}
+.quantity .quantityInputs{
+    padding: 0 1rem;
+    display: flexbox !important;
+    justify-content: space-between !important;
+   
+}
+.upload{
+    display: flex!important;
+    flex-direction: column !important;
+}
+
+.productPictures{
+    display: flex;
+    flex-direction: row !important;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 10rem;
+    border: 1px solid grey;
+    padding: 1rem;
+    background-color: #fff;
+    border-radius: 1rem;
+}
+
+.productPictures div{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 .5rem;
+}
+
+/* .productPictures div img{
+  
+} */
+.productPictures img{
+   max-width: 100%;
+    max-height: 9rem;
+    box-shadow: 5px 15px lightblue;
+    box-shadow: 1px 5px lightblue;
+}
+
+.deleteBtn{
+    position: relative !important;
+    top: -50px;
+    left: 2.2rem;
+}
+.uploadLabel{
+  display: inline-block;
+  background-color: indigo;
+  color: white;
+  padding: 0.5rem;
+  font-family: sans-serif;
+  border-radius: 0.3rem;
+  cursor: pointer;
+  /* margin-top: 1rem; */
+
 }
