--- a/src/scss/_example.scss
+++ b/src/scss/_example.scss
@@ -4,7 +4,7 @@
   }
 
   .tab-content {
-    background-color: $light-50 !important;
+    background-color: red !important;
 
     @at-root .dark-theme & {
       background-color: rgba(255, 255, 255, .1) !important;
