--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,4 +15,4 @@ $enable-rtl: true;
 
 // If you want to add custom CSS you can put it here.
 @import "custom";
-@import 'style.css'
+@import 'main.scss'
